--- a/MobileApp/OpportunityFund/app/build.gradle
+++ b/MobileApp/OpportunityFund/app/build.gradle
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.0.1'
     compile 'com.mcxiaoke.volley:library:1.0.+'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
