--- a/MobileApp/OpportunityFund/app/src/main/AndroidManifest.xml
+++ b/MobileApp/OpportunityFund/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="opofund.paypal.opohack.com.opportunityfund" >
+    package="com.opohack.opportunityfund.paypal" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".OpportunityFundBaseActivity"
+            android:name=".view.OpportunityFundBaseActivity"
             android:label="@string/title_activity_opportunity_fund_base" >
         </activity>
     </application>
