--- a/MobileApp/OpportunityFund/app/src/main/AndroidManifest.xml
+++ b/MobileApp/OpportunityFund/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.opohack.opportunityfund.paypal" >
 
     <application
+        android:name="com.opohack.opportunityfund.paypal.view.OpportunityFundApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
