--- a/MobileApp/OpportunityFund/app/src/main/AndroidManifest.xml
+++ b/MobileApp/OpportunityFund/app/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
     package="com.opohack.opportunityfund.paypal" >
 
     <application
-        android:name="com.opohack.opportunityfund.paypal.view.OpportunityFundApplication"
+        android:name=".view.OpoFundApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".view.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,6 +22,7 @@
             android:name=".view.OpportunityFundBaseActivity"
             android:label="@string/title_activity_opportunity_fund_base" >
         </activity>
+
     </application>
 
 </manifest>
